[package]
name = "strip-ansi"
description = "Strip ANSI Escape codes from strings"
version = "0.1.0"
authors = ["Sean Larkin <TheLarkInn@users.noreply.github.com>"]
repository = "https://github.com/TheLarkInn/strip-ansi"
license = "MIT"

[dependencies]
ansi-regex = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html